kubernetes/kind/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-cloud-demo-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/books"
        backend:
          service:
            name: book-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/ratings"
        backend:
          service:
            name: rating-service
            port:
              number: 8080
